--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
 .App {
+  max-width: 800px;
+  margin: 30px auto;
+}
+
+html {
+  background-color: #ffffff;
+}
+
+form {
+  border-bottom: 1px solid #f9f7fe;
+  margin-top: 40px;
+  padding-bottom: 30px;
+}
+
+.row ul {
+  margin: 0;
+  padding: 0;
+}
+
+li #humidity,
+#wind {
+  color: #28427b;
+}
+
+li .percent,
+.speed {
+  color: #28427b;
+}
+
+footer {
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 14px;
+  line-height: 18px;
+  margin-top: 40px;
   text-align: center;
+  display: block;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+footer a {
+  color: #fca311;
+  font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer a:hover {
+  color: #fca311;
 }
