--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-.App {
-  max-width: 800px;
-  margin: 30px auto;
-}
-
-html {
-  background-color: #ffffff;
-}
-
 form {
   border-bottom: 1px solid #f9f7fe;
   margin-top: 40px;
@@ -18,14 +9,9 @@ form {
   padding: 0;
 }
 
-li #humidity,
-#wind {
-  color: #28427b;
-}
-
 li .percent,
 .speed {
-  color: #28427b;
+  color: #954edb;
 }
 
 footer {
@@ -38,10 +24,10 @@ footer {
 }
 
 footer a {
-  color: #fca311;
+  color: #9772f3;
   font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
 }
 
 footer a:hover {
-  color: #fca311;
+  color: #9772f3;
 }
