--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,22 +1,18 @@
-.Weather .weather {
-  max-width: 800px;
+.Weather {
+  max-width: 700px;
   margin: 30px auto;
   background: #fff;
+  border: 2px solid #dadde1;
   border-radius: 16px;
-  box-shadow: 0 30px 50px rgb(65 50 100 / 8%);
+  box-shadow: 0 30px 50px rgba(74, 0, 246, 0.08);
   color: #878787;
   padding: 40px;
   display: block;
   font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
-}
-
-.Weather {
   padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
 }
 
-.Weather .weather .search-input {
+.Weather .search-input {
   background: #f9f7fe;
   border: none;
   border-radius: 6px;
@@ -28,8 +24,8 @@
   padding: 15px 20px;
 }
 
-.Weather .weather .btn {
-  background: #fca311;
+.Weather .btn {
+  background: #9772f3;
   border: none;
   font-size: 16px;
   font-weight: 700;
@@ -37,18 +33,18 @@
   padding: 15px 0;
 }
 
-.Weather .weather .btn:hover {
+.Weather .btn:hover {
   cursor: pointer;
-  background: #fca311;
+  background: #954edb;
 }
 
-.Weather .weather .form-control {
+.Weather .form-control {
   appearance: none;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   width: 100%;
 }
 
-.Weather .weather h1 {
+.Weather h1 {
   color: #000000;
   font-size: 38px;
   font-weight: 700;
@@ -67,9 +63,7 @@
 }
 
 .Weather .weather-temperature {
-  margin-left: 500px;
-  margin-top: -120px;
-  padding: 0px 12px;
+  margin-left: 100px;
   color: #000000;
   font-size: 80px;
   font-weight: 400;
