--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 form {
-  border-bottom: 1px solid #f9f7fe;
+  border-bottom: 1px solid rgba(151, 114, 243, 0.2);
   margin-top: 40px;
   padding-bottom: 30px;
 }
