--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,10 +1,10 @@
 .Weather {
   max-width: 700px;
   margin: 30px auto;
-  background: #fff;
+  background: rgba(255, 255, 255, 0.6);
   border: 2px solid #dadde1;
   border-radius: 16px;
-  box-shadow: 0 30px 50px rgba(74, 0, 246, 0.08);
+  box-shadow: 0 30px 50px rgba(151, 114, 243, 0.4);
   color: #878787;
   padding: 40px;
   display: block;
@@ -54,7 +54,7 @@
 }
 
 .Weather .WeatherInfo li {
-  color: #bdb8b8;
+  color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
   font-weight: 500;
   line-height: 20px;
@@ -89,7 +89,7 @@
 .Weather .weather-forecast {
   margin: 40px 0;
   text-align: center;
-  border-bottom: 1px solid #f9f7fe;
+  border-bottom: 1px solid rgba(151, 114, 243, 0.2);
   padding-bottom: 50px;
 }
 
