--- a/src/Weather.css
+++ b/src/Weather.css
@@ -61,29 +61,31 @@
   list-style: none;
 }
 
-.Weather .weather-temperature {
-  margin-left: 100px;
+.Weather .WeatherUnit .temp {
   color: #000000;
   font-size: 80px;
   font-weight: 400;
 }
 
-.Weather .weather-temperature .units {
+.Weather .WeatherUnit .units {
   color: #000000;
-  font-size: 28px;
+  font-size: 18px;
   position: relative;
   display: flex;
-  margin-top: 25px;
+  margin-top: 20px;
+  margin-right: 0px;
 }
 
-.Weather .weather-temperature .units a {
+.Weather .WeatherUnit .units a {
   text-decoration: none;
 }
 
-.Weather .weather-temperature img {
-  margin: 15px 0;
+.Weather .WeatherUnit img {
+  margin: 10px auto;
   height: 80px;
   width: 80px;
+  margin-left: 90px;
+  margin-right: 0;
 }
 
 .Weather .weather-forecast {
