--- a/src/Weather.css
+++ b/src/Weather.css
@@ -114,7 +114,7 @@
 }
 
 .Weather .weather-forecast-temperature-max {
-  color: #28427b;
+  color: #954edb;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -122,7 +122,7 @@
 }
 
 .Weather .weather-forecast-temperature-min {
-  color: #28427b;
+  color: #954edb;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
