--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,6 +1,6 @@
 .Weather {
   max-width: 700px;
-  margin: 30px auto;
+  margin: 70px auto;
   background: rgba(255, 255, 255, 0.6);
   border: 2px solid #dadde1;
   border-radius: 16px;
@@ -9,7 +9,7 @@
   padding: 40px;
   display: block;
   font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
-  padding: 20px;
+  padding: 0px 20px 20px 20px;
 }
 
 .Weather .search-input {
