--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 form {
-  border-bottom: 1px solid rgba(151, 114, 243, 0.2);
+  border-bottom: 1px solid rgba(87, 159, 201, 0.2);
   margin-top: 40px;
   padding-bottom: 30px;
 }
@@ -10,7 +10,7 @@ form {
 }
 
 li .conditions {
-  color: #954edb;
+  color: #579fc9;
 }
 
 footer {
@@ -23,10 +23,11 @@ footer {
 }
 
 footer a {
-  color: #9772f3;
+  color: #579fc9;
   font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
+  text-decoration: none;
 }
 
 footer a:hover {
-  color: #9772f3;
+  color: #e7ad2b;
 }
